--- a/reservation-service/pom.xml
+++ b/reservation-service/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>com.rixon.learn.springcloud</groupId>
 		<artifactId>reservation-cloud-app</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
