added eureka service and made changes to reservation service to register with eureka server

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	<modules>
 		<module>reservation-service</module>	
 		<module>config-service</module>
+		<module>eureka-service</module>
 	</modules>
 
 	<repositories>
