--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>reservation-service</module>	
 		<module>config-service</module>
 		<module>eureka-service</module>
+		<module>reservation-client</module>
 	</modules>
 
 	<repositories>
