Added controller to demonstrate how to get configuration from KeyValue store

--- a/consul-service/src/main/resources/bootstrap.properties
+++ b/consul-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
 spring.application.name=consul-service
-spring.cloud.config.uri=${config.server:http://localhost:8888}
+#spring.cloud.config.uri=${config.server:http://localhost:8888}
+spring.cloud.consul.host=192.168.99.100
+spring.cloud.consul.port=8500
