--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8888
-spring.cloud.config.server.git.uri=/Users/rixonmathew/workspace/github/spring-cloud/bootiful-microservices-config
+#spring.cloud.config.server.git.uri=/Users/rixonmathew/workspace/github/spring-cloud/bootiful-microservices-config
+spring.cloud.config.server.git.uri=https://github.com/joshlong/bootiful-microservices-config.git
+endpoints.shutdown.enabled=true
