--- a/hystrix-dashboard/src/main/resources/bootstrap.properties
+++ b/hystrix-dashboard/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
 spring.application.name=hystrix-dashboard
-spring.cloud.config.uri=${config.server:http://localhost:8888}
+#spring.cloud.config.uri=${config.server:http://localhost:8888}
+spring.cloud.config.uri=${vcap.services.config-service.credentials.uri:http://localhost:8888}
