--- a/reservation-client/src/main/resources/bootstrap.properties
+++ b/reservation-client/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 spring.application.name=reservation-client
 #spring.cloud.config.uri=${config.server:http://localhost:8888}
 spring.cloud.config.uri=${vcap.services.config-service.credentials.uri:http://localhost:8888}
+spring.cloud.stream.bindings.output=reservations
